oh yeah baby controle z incomming