@@ -8,37 +8,40 @@ import java.awt.geom.Point2D;
 
 import java.util.LinkedList;
 import java.util.ListIterator;
+import java.util.regex.Pattern;
+
 /**
  *
  * @author vinny
  */
 public class Simulatheure {
 
-    
     public enum Modes {
         ROUTIER, TRANSPORT, BESOINS, SIMULATION
     }
-    
+
     public enum Commandes {
         SELECTIONNER, INTERSECTION, TRONCON, ARRET, SOURCE, AJOUTERCIRCUIT, EDITERCIRCUIT
     }
-    
+    private Simulatheure_log m_log = new Simulatheure_log();
     private ReseauRoutier m_reseauRoutier = new ReseauRoutier();
     private LinkedList<Intersection> m_parametresTroncon = new LinkedList<>();
     private LinkedList<ElementRoutier> m_parametresElementRoutier = new LinkedList<>();
-    
+
     private ReseauTransport m_reseauTransport = new ReseauTransport();
     private LinkedList<Arret> m_arretsNouveauCircuit = new LinkedList<>();
     private LinkedList<Troncon> m_tronconsNouveauTrajet = new LinkedList<>();
     private Trajet m_trajet_temp = new Trajet();
     private Boolean m_modeNouvelArret = true;
     private Arret m_arret_temp = new Arret();
-    
-    private LinkedList<BesoinTransport> m_listBesoins = new LinkedList<>();   
-    
-    public Simulatheure() {}  
+
+    private LinkedList<BesoinTransport> m_listBesoins = new LinkedList<>();
+
+    public Simulatheure() {
+    }
+
     public void arreterSimulation() {
-        for (ListIterator<Arret> arrets = m_reseauTransport.getListArrets().listIterator() ;arrets.hasNext() ; ){
+        for (ListIterator<Arret> arrets = m_reseauTransport.getListArrets().listIterator(); arrets.hasNext();) {
             Arret arret = arrets.next();
             arret.viderFile();
         }
@@ -58,19 +61,20 @@ public class Simulatheure {
             circuit.getListeAutobus().clear();
         }
     }
-    public void copier(Simulatheure p_simulatheure){
-       // p_simulatheure.m_arret_temp = p_simulatheure.m_reseauTransport.this.m_arret_temp;
+
+    public void copier(Simulatheure p_simulatheure) {
+        // p_simulatheure.m_arret_temp = p_simulatheure.m_reseauTransport.this.m_arret_temp;
     }
-    public ReseauRoutier getRoutier()
-    {
+
+    public ReseauRoutier getRoutier() {
         return m_reseauRoutier;
     }
-    
-    public ReseauTransport getTransport(){
+
+    public ReseauTransport getTransport() {
         return m_reseauTransport;
     }
-    
-    public void demarrerSimulation(){
+
+    public void demarrerSimulation() {
         m_reseauRoutier.initReseauRoutier();
         m_reseauTransport.initReseauTransport();
         ListIterator<BesoinTransport> BesoinTransportItr = m_listBesoins.listIterator();
@@ -78,211 +82,191 @@ public class Simulatheure {
             BesoinTransportItr.next().initBesoinTransport();
         }
     }
-    public void rafraichirSimulation(Temps m_deltaT){
+
+    public void rafraichirSimulation(Temps m_deltaT) {
         m_reseauTransport.calculEtatReseauTransport(m_deltaT);
     }
-    
-    public ElementRoutier selectionnerElementRoutier(Integer p_x, Integer p_y, Float p_echelle){
+
+    public ElementRoutier selectionnerElementRoutier(Integer p_x, Integer p_y, Float p_echelle) {
         ElementRoutier er = obtenirElementRoutier(p_x, p_y, p_echelle);
-        if (er != null){
-            er.changerStatutSelection(); 
-            m_parametresElementRoutier.add(er); 
-            if (m_parametresElementRoutier.size() == 2)
-            {
+        if (er != null) {
+            er.changerStatutSelection();
+            m_parametresElementRoutier.add(er);
+            if (m_parametresElementRoutier.size() == 2) {
                 ElementRoutier premierElement = m_parametresElementRoutier.getFirst();
                 ElementRoutier deuxiemeElement = m_parametresElementRoutier.getLast();
                 deselectionnerRoutier();
                 selectionnerElementRoutier(p_x, p_y, p_echelle);
             }
         }
-        
+
         return er;
     }
-    public ElementRoutier selectionnerPlusieursElementRoutier(Integer p_x, Integer p_y, Float p_echelle){
+
+    public ElementRoutier selectionnerPlusieursElementRoutier(Integer p_x, Integer p_y, Float p_echelle) {
         ElementRoutier plusieursEr = obtenirElementRoutier(p_x, p_y, p_echelle);
-        if (plusieursEr != null){
-            plusieursEr.changerStatutSelection(); 
-                   
+        if (plusieursEr != null) {
+            plusieursEr.changerStatutSelection();
+
         }
         return plusieursEr;
     }
-    
-    
-    public ElementRoutier obtenirElementRoutier(Integer p_x, Integer p_y, Float p_echelle)
-    {
+
+    public ElementRoutier obtenirElementRoutier(Integer p_x, Integer p_y, Float p_echelle) {
         float xReel;
-        float yReel;        
-        float largeurSelection;        
-        
-        if (p_echelle > 1)
-        {
+        float yReel;
+        float largeurSelection;
+
+        if (p_echelle > 1) {
             xReel = (p_x - Intersection.RAYON) / p_echelle;
             yReel = (p_y - Intersection.RAYON) / p_echelle;
             largeurSelection = 2 * Intersection.RAYON / p_echelle;
-        }
-        else
-        {
+        } else {
             xReel = p_x / p_echelle - Intersection.RAYON;
             yReel = p_y / p_echelle - Intersection.RAYON;
             largeurSelection = 2 * Intersection.RAYON;
-        }        
-        
+        }
+
         Intersection intersection = m_reseauRoutier.obtenirIntersection(xReel, yReel, largeurSelection);
-        if (intersection == null)
-        {
-            if (p_echelle > 1)
-            {
+        if (intersection == null) {
+            if (p_echelle > 1) {
                 xReel = (p_x - Troncon.LARGEUR / 2) / p_echelle;
                 yReel = (p_y - Troncon.LARGEUR / 2) / p_echelle;
                 largeurSelection = Troncon.LARGEUR / p_echelle;
-            }
-            else
-            {
+            } else {
                 xReel = p_x / p_echelle - Troncon.LARGEUR / 2;
                 yReel = p_y / p_echelle - Troncon.LARGEUR / 2;
                 largeurSelection = Troncon.LARGEUR;
             }
-            
+
             return m_reseauRoutier.obtenirTroncon(xReel, yReel, largeurSelection, p_echelle);
-        }
-        else{
+        } else {
             return intersection;
         }
     }
-    
-    public void deselectionnerTout(){
+
+    public void deselectionnerTout() {
         deselectionnerRoutier();
         deselectionnerTransport();
     }
-    
-    public void deselectionnerRoutier()
-    {
+
+    public void deselectionnerRoutier() {
         m_parametresTroncon.clear();
         m_parametresElementRoutier.clear();
         m_reseauRoutier.deselectionnerTout();
     }
-        
-    public void deselectionnerTransport()
-    {
+
+    public void deselectionnerTransport() {
         m_arretsNouveauCircuit.clear();
         m_tronconsNouveauTrajet.clear();
         m_reseauTransport.deselectionnerTout();
     }
-    
-    public void ajouterIntersection(Integer p_x, Integer p_y, Float p_echelle)
-    {
+
+    public void ajouterIntersection(Integer p_x, Integer p_y, Float p_echelle) {
         float xReel = p_x / p_echelle;
-        float yReel = p_y / p_echelle;  
+        float yReel = p_y / p_echelle;
         m_reseauRoutier.ajouterIntersection(xReel, yReel);
+        String action = "ajouterIntersection\t".concat(p_x.toString()).concat("\t").concat(p_y.toString()).concat("\t").concat(p_echelle.toString());
+        m_log.ajouterAction(action);
     }
-    
-    public void construireTroncon(Integer p_x, Integer p_y, Float p_echelle)
-    {
+
+    public void construireTroncon(Integer p_x, Integer p_y, Float p_echelle) {
         float xReel;
-        float yReel;        
-        float largeurSelection;        
-        
-        if (p_echelle > 1)
-        {
+        float yReel;
+        float largeurSelection;
+
+        if (p_echelle > 1) {
             xReel = (p_x - Intersection.RAYON) / p_echelle;
             yReel = (p_y - Intersection.RAYON) / p_echelle;
             largeurSelection = 2 * Intersection.RAYON / p_echelle;
-        }
-        else
-        {
+        } else {
             xReel = p_x / p_echelle - Intersection.RAYON;
             yReel = p_y / p_echelle - Intersection.RAYON;
             largeurSelection = 2 * Intersection.RAYON;
         }
-        
+
         Intersection intersection = m_reseauRoutier.selectionnerIntersection(xReel, yReel, largeurSelection);
-        if (intersection != null)
-        {
-            if (intersection.estSelectionne())
+        if (intersection != null) {
+            if (intersection.estSelectionne()) {
                 m_parametresTroncon.add(intersection);
-            else
+            } else {
                 m_parametresTroncon.removeFirst();
-            
-            if (m_parametresTroncon.size() == 2)
-            {
+            }
+
+            if (m_parametresTroncon.size() == 2) {
                 Intersection origine = m_parametresTroncon.getFirst();
                 Intersection destination = m_parametresTroncon.getLast();
-                
+
                 m_reseauRoutier.ajouterTroncon(origine, destination);
                 ajusterDoubleSens();
-                
+
                 m_parametresTroncon.removeFirst();
                 origine.changerStatutSelection();
             }
         }
     }
-    
-    public ElementTransport selectionnerElementTransport(Integer p_x, Integer p_y, Float p_echelle){
+
+    public ElementTransport selectionnerElementTransport(Integer p_x, Integer p_y, Float p_echelle) {
         float xReel;
-        float yReel;        
-        float largeurSelection;         
-          if (p_echelle > 1)
-        {
+        float yReel;
+        float largeurSelection;
+        if (p_echelle > 1) {
             xReel = (p_x - Arret.RAYON) / p_echelle;
             yReel = (p_y - Arret.RAYON) / p_echelle;
             largeurSelection = 2 * Arret.RAYON / p_echelle;
-        }
-        else
-        {
+        } else {
             xReel = p_x / p_echelle - Arret.RAYON;
             yReel = p_y / p_echelle - Arret.RAYON;
             largeurSelection = 2 * Arret.RAYON;
-        }        
-        
-        SourceAutobus src = m_reseauTransport.selectionnerSourceAutobus(xReel, yReel, largeurSelection, p_echelle);
-        if (src!=null){
-            return src;
         }
-        else{
+
+        SourceAutobus src = m_reseauTransport.selectionnerSourceAutobus(xReel, yReel, largeurSelection, p_echelle);
+        if (src != null) {
+            return src;
+        } else {
             return m_reseauTransport.selectionnerArret(xReel, yReel, largeurSelection, p_echelle);
         }
     }
 
-    public void ajouterArret(Integer p_x, Integer p_y, Float p_echelle){
+    public void ajouterArret(Integer p_x, Integer p_y, Float p_echelle) {
         float xReel = p_x / p_echelle;
-        float yReel = p_y / p_echelle;  
-        for (ListIterator<Intersection> intersection =m_reseauRoutier.getIntersections().listIterator() ; intersection.hasNext() ; ){
+        float yReel = p_y / p_echelle;
+        for (ListIterator<Intersection> intersection = m_reseauRoutier.getIntersections().listIterator(); intersection.hasNext();) {
             Intersection intersectionOrigin = intersection.next();
-                if(intersectionOrigin.estSelectionne()){
-                    for(Arret arret : m_reseauTransport.getListArrets()){
-                        if(!arret.getEmplacement().estSurTroncon()){
-                        if(arret.getEmplacement().getIntersection() == intersectionOrigin){
-                            return; 
-                        }
+            if (intersectionOrigin.estSelectionne()) {
+                for (Arret arret : m_reseauTransport.getListArrets()) {
+                    if (!arret.getEmplacement().estSurTroncon()) {
+                        if (arret.getEmplacement().getIntersection() == intersectionOrigin) {
+                            return;
                         }
                     }
-                Point2D.Float p2 = new Point2D.Float(xReel,yReel);
-                Emplacement arretSurIntersection = new Emplacement(false, 0, null,intersectionOrigin);
-                m_reseauTransport.ajouterArret(new Arret(arretSurIntersection, ""));  
+                }
+                Point2D.Float p2 = new Point2D.Float(xReel, yReel);
+                Emplacement arretSurIntersection = new Emplacement(false, 0, null, intersectionOrigin);
+                m_reseauTransport.ajouterArret(new Arret(arretSurIntersection, ""));
                 return;
-                }                
-             
-    
-            for (ListIterator<Troncon> troncons = intersectionOrigin.getTroncons().listIterator() ; troncons.hasNext() ; ){
+            }
+
+            for (ListIterator<Troncon> troncons = intersectionOrigin.getTroncons().listIterator(); troncons.hasNext();) {
                 Troncon troncon = troncons.next();
-                if(troncon.estSelectionne()){
-                    Point2D.Float p1 = new Point2D.Float(xReel,yReel);
+                if (troncon.estSelectionne()) {
+                    Point2D.Float p1 = new Point2D.Float(xReel, yReel);
                     double distance1 = intersectionOrigin.getPosition().distance(p1);
                     double distance2 = troncon.getLongueurTroncon();
-                    float pourcentage = (float) (distance1/distance2);
-                     Emplacement emplacement = new Emplacement(true, pourcentage,troncon,intersectionOrigin);
-                     m_reseauTransport.ajouterArret(new Arret(emplacement, ""));
-                     return;
+                    float pourcentage = (float) (distance1 / distance2);
+                    Emplacement emplacement = new Emplacement(true, pourcentage, troncon, intersectionOrigin);
+                    m_reseauTransport.ajouterArret(new Arret(emplacement, ""));
+                    return;
                 }
             }
         }
     }
-    
-    public void cancellerCircuit(){
+
+    public void cancellerCircuit() {
         deselectionnerRoutier();
         for (Intersection intrsct : m_reseauRoutier.getIntersections()) {
-            for (Troncon trc : intrsct.getTroncons()){
-                if (trc.estSuggere()){
+            for (Troncon trc : intrsct.getTroncons()) {
+                if (trc.estSuggere()) {
                     trc.setEstSuggere(false);
                 }
             }
@@ -293,133 +277,110 @@ public class Simulatheure {
         m_modeNouvelArret = true;
     }
 
-    public boolean construireCircuit(Integer p_x, Integer p_y, Float p_echelle)
-    {
+    public boolean construireCircuit(Integer p_x, Integer p_y, Float p_echelle) {
         float xReel;
-        float yReel;        
+        float yReel;
         float largeurSelection;
         Boolean estConstructible = false;
         Arret arretInitiale;
         Arret arretFinale;
-        
-        if (m_arretsNouveauCircuit.size() < 2)
-        {
-            if (p_echelle > 1)
-            {
+
+        if (m_arretsNouveauCircuit.size() < 2) {
+            if (p_echelle > 1) {
                 xReel = (p_x - Arret.RAYON) / p_echelle;
                 yReel = (p_y - Arret.RAYON) / p_echelle;
                 largeurSelection = 2 * Arret.RAYON / p_echelle;
-            }
-            else
-            {
+            } else {
                 xReel = p_x / p_echelle - Arret.RAYON;
                 yReel = p_y / p_echelle - Arret.RAYON;
                 largeurSelection = 2 * Arret.RAYON;
             }
-            
+
             Arret arret = m_reseauTransport.selectionnerArret(xReel, yReel, largeurSelection, p_echelle);
-            if (arret != null)
-            {
-                if (arret.estSelectionne())
+            if (arret != null) {
+                if (arret.estSelectionne()) {
                     m_arretsNouveauCircuit.add(arret);
-                else
+                } else {
                     m_arretsNouveauCircuit.clear();
+                }
             }
-            
-            if (m_arretsNouveauCircuit.size() == 2)
-            {
+
+            if (m_arretsNouveauCircuit.size() == 2) {
                 arretInitiale = m_arretsNouveauCircuit.getFirst();
                 arretFinale = m_arretsNouveauCircuit.getLast();
 
-                if (arretInitiale.getEmplacement().estSurTroncon())
-                {
+                if (arretInitiale.getEmplacement().estSurTroncon()) {
                     m_tronconsNouveauTrajet.add(arretInitiale.getEmplacement().getTroncon());
-                    for (Troncon troncon : m_tronconsNouveauTrajet.getLast().getDestination().getTroncons())
+                    for (Troncon troncon : m_tronconsNouveauTrajet.getLast().getDestination().getTroncons()) {
                         troncon.setEstSuggere(true);
-                    
-                    if (arretFinale.getEmplacement().estSurTroncon())
-                    {
-                        if (arretFinale.getEmplacement().getTroncon() == m_tronconsNouveauTrajet.getLast())
-                        {
-                            if (arretInitiale.getEmplacement().getPourcentageParcouru() < arretFinale.getEmplacement().getPourcentageParcouru())
-                                estConstructible = true;
-                            else 
-                                m_tronconsNouveauTrajet.add(arretFinale.getEmplacement().getTroncon());
-                        }
+                    }
 
-                        else
-                        {
+                    if (arretFinale.getEmplacement().estSurTroncon()) {
+                        if (arretFinale.getEmplacement().getTroncon() == m_tronconsNouveauTrajet.getLast()) {
+                            if (arretInitiale.getEmplacement().getPourcentageParcouru() < arretFinale.getEmplacement().getPourcentageParcouru()) {
+                                estConstructible = true;
+                            } else {
+                                m_tronconsNouveauTrajet.add(arretFinale.getEmplacement().getTroncon());
+                            }
+                        } else {
                             m_tronconsNouveauTrajet.add(arretFinale.getEmplacement().getTroncon());
                             estConstructible = arretFinale.getEmplacement().getTroncon().estSuggere();
                         }
-                    }
-                    else 
+                    } else {
                         estConstructible = m_tronconsNouveauTrajet.getLast().getDestination() == arretFinale.getEmplacement().getIntersection();
-                }
-                else
-                {
-                    for (Troncon troncon :arretInitiale.getEmplacement().getIntersection().getTroncons())
+                    }
+                } else {
+                    for (Troncon troncon : arretInitiale.getEmplacement().getIntersection().getTroncons()) {
                         troncon.setEstSuggere(true);
-                    
-                    if (arretFinale.getEmplacement().estSurTroncon())
-                    {
+                    }
+
+                    if (arretFinale.getEmplacement().estSurTroncon()) {
                         m_tronconsNouveauTrajet.add(arretFinale.getEmplacement().getTroncon());
                         estConstructible = arretFinale.getEmplacement().getTroncon().estSuggere();
                     }
                 }
             }
-        }
-        else
-        {
-            if (p_echelle > 1)
-            {
+        } else {
+            if (p_echelle > 1) {
                 xReel = (p_x - Troncon.LARGEUR / 2) / p_echelle;
                 yReel = (p_y - Troncon.LARGEUR / 2) / p_echelle;
                 largeurSelection = Troncon.LARGEUR / p_echelle;
-            }
-            else
-            {
+            } else {
                 xReel = p_x / p_echelle - Troncon.LARGEUR / 2;
                 yReel = p_y / p_echelle - Troncon.LARGEUR / 2;
                 largeurSelection = Troncon.LARGEUR;
             }
-            
+
             Troncon tronconSelectionne = m_reseauRoutier.obtenirTroncon(xReel, yReel, largeurSelection, p_echelle);
-            if (tronconSelectionne == null || !tronconSelectionne.estSuggere())
-            {
+            if (tronconSelectionne == null || !tronconSelectionne.estSuggere()) {
                 return estConstructible;
             }
             arretFinale = m_arretsNouveauCircuit.getLast();
-            
-            if (arretFinale.getEmplacement().estSurTroncon())
-            {
+
+            if (arretFinale.getEmplacement().estSurTroncon()) {
                 m_tronconsNouveauTrajet.add(m_tronconsNouveauTrajet.size() - 1, tronconSelectionne);
                 estConstructible = tronconSelectionne.getDestination() == m_tronconsNouveauTrajet.getLast().getOrigine();
-            }
-            else
-            {
+            } else {
                 m_tronconsNouveauTrajet.add(tronconSelectionne);
                 estConstructible = tronconSelectionne.getDestination() == arretFinale.getEmplacement().getIntersection();
             }
-            
-            if (!estConstructible)
-            {
+
+            if (!estConstructible) {
                 m_reseauRoutier.desuggererTout();
                 tronconSelectionne.changerStatutSelection();
-                for (Troncon troncon : tronconSelectionne.getDestination().getTroncons())
-                {
-                    if (!m_tronconsNouveauTrajet.contains(troncon))
+                for (Troncon troncon : tronconSelectionne.getDestination().getTroncons()) {
+                    if (!m_tronconsNouveauTrajet.contains(troncon)) {
                         troncon.setEstSuggere(true);
+                    }
                 }
             }
         }
-        
-        if (estConstructible)
-        {
+
+        if (estConstructible) {
             arretInitiale = m_arretsNouveauCircuit.getFirst();
             arretFinale = m_arretsNouveauCircuit.getLast();
             Trajet trajet = new Trajet(arretInitiale.getEmplacement(), arretFinale.getEmplacement(), new LinkedList<>(m_tronconsNouveauTrajet));
-            
+
             LinkedList<PaireArretTrajet> listePaires = new LinkedList<>();
             listePaires.add(new PaireArretTrajet(arretInitiale, trajet));
             listePaires.add(new PaireArretTrajet(arretFinale, null));
@@ -428,28 +389,29 @@ public class Simulatheure {
         }
         return estConstructible;
     }
-    
-    public void editerCircuit(Circuit circuit, Integer p_x, Integer p_y, Float p_echelle){
-        Arret arretPrecedent = circuit.getListeArretTrajet().getLast().getArret();
-        
-        if (m_modeNouvelArret){
 
-            if (circuit.getBoucle()) return;
-            
+    public void editerCircuit(Circuit circuit, Integer p_x, Integer p_y, Float p_echelle) {
+        Arret arretPrecedent = circuit.getListeArretTrajet().getLast().getArret();
+
+        if (m_modeNouvelArret) {
+
+            if (circuit.getBoucle()) {
+                return;
+            }
+
             ElementTransport nouvET = selectionnerElementTransport(p_x, p_y, p_echelle);
-            if (nouvET == null || nouvET.getClass() != Arret.class){
+            if (nouvET == null || nouvET.getClass() != Arret.class) {
                 return;
             }
             Arret nouvArret = (Arret) nouvET;
 
             //verifier que l'arret n'est pas deja dans le circuit ou si premier boucler
             Boolean premier = true;
-            for(PaireArretTrajet pat : circuit.getListeArretTrajet()){
-                if (pat.getArret() == nouvArret && premier){
+            for (PaireArretTrajet pat : circuit.getListeArretTrajet()) {
+                if (pat.getArret() == nouvArret && premier) {
                     circuit.setBoucle(true);
                     premier = false;
-                }
-                else if (pat.getArret() == nouvArret){
+                } else if (pat.getArret() == nouvArret) {
                     return;
                 }
             }
@@ -464,184 +426,173 @@ public class Simulatheure {
             Boolean interOrigVersTrcImmediat = !precSurTrc && nouvSurTrc && emplPrec.getIntersection() == emplNouv.getTroncon().getOrigine();
             Boolean trcVersTrcSuivant = precSurTrc && nouvSurTrc && emplPrec.getTroncon().getDestination() == emplNouv.getTroncon().getOrigine();
 
-            if (memeTronconBonSens || trcVersInterDestImmediate || interOrigVersTrcImmediat || trcVersTrcSuivant){
+            if (memeTronconBonSens || trcVersInterDestImmediate || interOrigVersTrcImmediat || trcVersTrcSuivant) {
                 LinkedList<Troncon> listetmp = new LinkedList<>();
-                if (!interOrigVersTrcImmediat){
+                if (!interOrigVersTrcImmediat) {
                     listetmp.add(emplPrec.getTroncon());
                 }
-                if (trcVersTrcSuivant || interOrigVersTrcImmediat){
+                if (trcVersTrcSuivant || interOrigVersTrcImmediat) {
                     listetmp.add(emplNouv.getTroncon());
                 }
                 Trajet trj = new Trajet(emplPrec, emplNouv, listetmp);
                 circuit.ajouterPaire(nouvArret, null);
-                circuit.getListeArretTrajet().get(circuit.getListeArretTrajet().size()-2).setTrajet(trj);
+                circuit.getListeArretTrajet().get(circuit.getListeArretTrajet().size() - 2).setTrajet(trj);
                 cancellerCircuit();
                 return;
             }
-            
+
             //mettre en couleur le troncon partiel apres l'arret precedent
-            if(circuit.getListeArretTrajet().getLast().getArret().getEmplacement().estSurTroncon()){
+            if (circuit.getListeArretTrajet().getLast().getArret().getEmplacement().estSurTroncon()) {
                 Troncon trc = circuit.getListeArretTrajet().getLast().getArret().getEmplacement().getTroncon();
                 trc.changerStatutSelection();
             }
 
             //mettre en couleur le troncon partiel avant le nouvel arret
-            if(nouvArret.getEmplacement().estSurTroncon()){
+            if (nouvArret.getEmplacement().estSurTroncon()) {
                 Troncon trc = nouvArret.getEmplacement().getTroncon();
                 trc.changerStatutSelection();
             }
             m_modeNouvelArret = false;
 
             m_arret_temp = nouvArret;
-            if(emplPrec.estSurTroncon()){
+            if (emplPrec.estSurTroncon()) {
                 m_trajet_temp.getListeTroncons().add(emplPrec.getTroncon());
             }
             m_trajet_temp.setEmplacementInitial(emplPrec);
-            
+
             //pour les suggestions
             Intersection interSugg;
-            if (precSurTrc){
+            if (precSurTrc) {
                 interSugg = emplPrec.getTroncon().getDestination();
-            }
-            else{
+            } else {
                 interSugg = emplPrec.getIntersection();
             }
             for (Intersection intrsct : m_reseauRoutier.getIntersections()) {
-                for (Troncon trc : intrsct.getTroncons()){
-                    if (interSugg.getTroncons().contains(trc))
+                for (Troncon trc : intrsct.getTroncons()) {
+                    if (interSugg.getTroncons().contains(trc)) {
                         trc.setEstSuggere(true);
-                    else
+                    } else {
                         trc.setEstSuggere(false);
+                    }
                 }
             }
-        }
-        else{ //mode trajet           
+        } else { //mode trajet           
             ElementRoutier nouvER = obtenirElementRoutier(p_x, p_y, p_echelle);
-            if (nouvER == null || nouvER.getClass() != Troncon.class){
+            if (nouvER == null || nouvER.getClass() != Troncon.class) {
                 return;
             }
             Troncon nouvTroncon = (Troncon) nouvER;
-            
+
             if (m_trajet_temp.getListeTroncons().isEmpty()) { //trajet pas encore créé
-                if (circuit.getListeArretTrajet().get(circuit.getListeArretTrajet().size()-1)
+                if (circuit.getListeArretTrajet().get(circuit.getListeArretTrajet().size() - 1)
                         .getArret().getEmplacement().estSurTroncon()) { //il faut vérifier que c'est après le dernier arret
-                    if (circuit.getListeArretTrajet().get(circuit.getListeArretTrajet().size()-1)
-                            .getArret().getEmplacement().getTroncon().getDestination() != nouvTroncon.getOrigine()) { 
+                    if (circuit.getListeArretTrajet().get(circuit.getListeArretTrajet().size() - 1)
+                            .getArret().getEmplacement().getTroncon().getDestination() != nouvTroncon.getOrigine()) {
                         return;
                     }
-                }
-                else{
-                    if (circuit.getListeArretTrajet().get(circuit.getListeArretTrajet().size()-1)
-                            .getArret().getEmplacement().getIntersection() != nouvTroncon.getOrigine()){
-                        return;
-                    }
-                }
-            }
-            else{
-                if (!nouvTroncon.getOrigine().equals(m_trajet_temp.getListeTroncons().getLast().getDestination())) {
-                    //il faut que ça soit contigu
+                } else if (circuit.getListeArretTrajet().get(circuit.getListeArretTrajet().size() - 1)
+                        .getArret().getEmplacement().getIntersection() != nouvTroncon.getOrigine()) {
                     return;
                 }
+            } else if (!nouvTroncon.getOrigine().equals(m_trajet_temp.getListeTroncons().getLast().getDestination())) {
+                //il faut que ça soit contigu
+                return;
             }
-            
+
             nouvTroncon.changerStatutSelection();
             m_trajet_temp.getListeTroncons().add(nouvTroncon);
-            
+
             for (Intersection intrsct : m_reseauRoutier.getIntersections()) {
-                for (Troncon trc : intrsct.getTroncons()){
-                    if (nouvTroncon.getDestination().getTroncons().contains(trc))
+                for (Troncon trc : intrsct.getTroncons()) {
+                    if (nouvTroncon.getDestination().getTroncons().contains(trc)) {
                         trc.setEstSuggere(true);
-                    else
+                    } else {
                         trc.setEstSuggere(false);
+                    }
                 }
             }
-            
+
             //si dernier troncon avant l'arret on push le trajet
-            if(m_arret_temp.getEmplacement().estSurTroncon()){
+            if (m_arret_temp.getEmplacement().estSurTroncon()) {
                 if (nouvTroncon.getDestination() == m_arret_temp.getEmplacement().getTroncon().getOrigine()) {
                     m_trajet_temp.getListeTroncons().addLast(m_arret_temp.getEmplacement().getTroncon());
                     m_trajet_temp.setEmplacementFinal(m_arret_temp.getEmplacement());
                     circuit.ajouterPaire(m_arret_temp, null);
-                    circuit.getListeArretTrajet().get(circuit.getListeArretTrajet().size()-2).setTrajet(m_trajet_temp);
-                    
-                    cancellerCircuit();
-                }
-            }
-            else{ //arret sur intersection
-                if (nouvTroncon.getDestination() == m_arret_temp.getEmplacement().getIntersection()) {
-                    m_trajet_temp.setEmplacementFinal(m_arret_temp.getEmplacement());
-                    circuit.ajouterPaire(m_arret_temp, null);
-                    circuit.getListeArretTrajet().get(circuit.getListeArretTrajet().size()-2).setTrajet(m_trajet_temp);
+                    circuit.getListeArretTrajet().get(circuit.getListeArretTrajet().size() - 2).setTrajet(m_trajet_temp);
 
                     cancellerCircuit();
                 }
-            }
+            } else //arret sur intersection
+             if (nouvTroncon.getDestination() == m_arret_temp.getEmplacement().getIntersection()) {
+                    m_trajet_temp.setEmplacementFinal(m_arret_temp.getEmplacement());
+                    circuit.ajouterPaire(m_arret_temp, null);
+                    circuit.getListeArretTrajet().get(circuit.getListeArretTrajet().size() - 2).setTrajet(m_trajet_temp);
+
+                    cancellerCircuit();
+                }
         }
     }
-    
-    public void ajouterSource(Integer p_x, Integer p_y, Float p_echelle){
+
+    public void ajouterSource(Integer p_x, Integer p_y, Float p_echelle) {
         float xReel = p_x / p_echelle;
-        float yReel = p_y / p_echelle;  
-        for (ListIterator<Circuit> circuits =m_reseauTransport.getListeCircuits().listIterator() ; circuits.hasNext() ; ){
+        float yReel = p_y / p_echelle;
+        for (ListIterator<Circuit> circuits = m_reseauTransport.getListeCircuits().listIterator(); circuits.hasNext();) {
             Circuit circuit = circuits.next();
-            if(circuit.estSelectionne()){
+            if (circuit.estSelectionne()) {
                 Arret arret1 = circuit.getListeArretTrajet().getFirst().getArret();
                 Arret arret2 = circuit.getListeArretTrajet().getLast().getArret();
-                for (ListIterator<PaireArretTrajet> paires =circuit.getListeArretTrajet().listIterator() ; paires.hasNext() ; ){
+                for (ListIterator<PaireArretTrajet> paires = circuit.getListeArretTrajet().listIterator(); paires.hasNext();) {
                     PaireArretTrajet paire = paires.next();
-                    if (paire.getTrajet() == null){
+                    if (paire.getTrajet() == null) {
                         return;
                     }
-                    for (ListIterator<Troncon> troncons =paire.getTrajet().getListeTroncons().listIterator() ; troncons.hasNext() ; ){
+                    for (ListIterator<Troncon> troncons = paire.getTrajet().getListeTroncons().listIterator(); troncons.hasNext();) {
                         Troncon troncon = troncons.next();
-                        if(troncon.estSelectionne()){
-                            Point2D.Float p1 = new Point2D.Float(xReel,yReel);
+                        if (troncon.estSelectionne()) {
+                            Point2D.Float p1 = new Point2D.Float(xReel, yReel);
                             double distance1 = troncon.getOrigine().getPosition().distance(p1);
                             double distance2 = troncon.getLongueurTroncon();
-                            float pourcentage = (float) (distance1/distance2);
+                            float pourcentage = (float) (distance1 / distance2);
                             Boolean avantArret1 = false;
                             Boolean apresArret2 = false;
                             Troncon trc1 = null;
                             Troncon trc2 = null;
-                            if(arret1 != null){
-                                if(arret1.getEmplacement().estSurTroncon()){
+                            if (arret1 != null) {
+                                if (arret1.getEmplacement().estSurTroncon()) {
                                     trc1 = arret1.getEmplacement().getTroncon();
-                                    if(troncon.equals(trc1)){
-                                        if(pourcentage <= arret1.getEmplacement().getPourcentageParcouru()){
-                                            avantArret1=true;
+                                    if (troncon.equals(trc1)) {
+                                        if (pourcentage <= arret1.getEmplacement().getPourcentageParcouru()) {
+                                            avantArret1 = true;
                                         }
                                     }
                                 }
-                                if(arret2 != null){
-                                    if(arret2.getEmplacement().estSurTroncon()){
+                                if (arret2 != null) {
+                                    if (arret2.getEmplacement().estSurTroncon()) {
                                         trc2 = arret2.getEmplacement().getTroncon();
-                                        if(troncon.equals(trc2)){
-                                            if(pourcentage >= arret2.getEmplacement().getPourcentageParcouru()){
-                                                apresArret2=true;
+                                        if (troncon.equals(trc2)) {
+                                            if (pourcentage >= arret2.getEmplacement().getPourcentageParcouru()) {
+                                                apresArret2 = true;
                                             }
                                         }
                                     }
                                 }
-                                if(trc1 != null && trc2 != null){
-                                    if (trc1.equals(trc2)){
-                                        if (!circuit.getBoucle()){
-                                            if (arret1.getEmplacement().getPourcentageParcouru() > arret2.getEmplacement().getPourcentageParcouru()){
-                                                if (avantArret1 && apresArret2){
+                                if (trc1 != null && trc2 != null) {
+                                    if (trc1.equals(trc2)) {
+                                        if (!circuit.getBoucle()) {
+                                            if (arret1.getEmplacement().getPourcentageParcouru() > arret2.getEmplacement().getPourcentageParcouru()) {
+                                                if (avantArret1 && apresArret2) {
                                                     return;
                                                 }
-                                            }
-                                            else{
-                                                if(avantArret1 || apresArret2){
-                                                    return;
-                                                }
+                                            } else if (avantArret1 || apresArret2) {
+                                                return;
                                             }
                                         }
                                     }
                                 }
-                                
-                                Emplacement emplacement = new Emplacement(true, pourcentage,troncon,troncon.getOrigine());
+
+                                Emplacement emplacement = new Emplacement(true, pourcentage, troncon, troncon.getOrigine());
                                 Distribution distributionDefault = new Distribution();
-                                distributionDefault.setDistribution(new Temps(15*60), new Temps(15*60), new Temps(15*60));
+                                distributionDefault.setDistribution(new Temps(15 * 60), new Temps(15 * 60), new Temps(15 * 60));
                                 m_reseauTransport.ajoutSource(emplacement, circuit, "Source", distributionDefault, new Temps(0));
                                 return;
                             }
@@ -651,72 +602,90 @@ public class Simulatheure {
             }
         }
     }
-    
-    public LinkedList<ElementRoutier> getElementsSelectionnesRoutier(){
+
+    public LinkedList<ElementRoutier> getElementsSelectionnesRoutier() {
         return m_reseauRoutier.getElementsSelectionnes();
     }
-    
-    public LinkedList<ElementTransport> getElementsSelectionnesTransport(){
+
+    public LinkedList<ElementTransport> getElementsSelectionnesTransport() {
         return m_reseauTransport.getElementsSelectionnes();
     }
-    
-    public Boolean supprimerSelectionRoutier()
-    {
-        for (Arret arr : m_reseauTransport.getListArrets())
-        {
-            if (arr.getEmplacement().estSurTroncon()){
+
+    public Boolean supprimerSelectionRoutier() {
+        for (Arret arr : m_reseauTransport.getListArrets()) {
+            if (arr.getEmplacement().estSurTroncon()) {
                 Troncon trc_arr = arr.getEmplacement().getTroncon();
                 if (trc_arr.estSelectionne() || trc_arr.getDestination().estSelectionne()
                         || trc_arr.getOrigine().estSelectionne()) {
                     return false;
                 }
-            }
-            else{
-                if (arr.getEmplacement().getIntersection().estSelectionne())
-                    return false;
+            } else if (arr.getEmplacement().getIntersection().estSelectionne()) {
+                return false;
             }
         }
-        for (Circuit circ : m_reseauTransport.getListeCircuits())
-        {
+        for (Circuit circ : m_reseauTransport.getListeCircuits()) {
             for (PaireArretTrajet pat : circ.getListeArretTrajet()) {
                 Trajet traj = pat.getTrajet();
                 if (traj != null) {
-                    for (Troncon trc : traj.getListeTroncons()){
-                        if (trc.estSelectionne() || trc.getOrigine().estSelectionne() 
-                                || trc.getDestination().estSelectionne()){
+                    for (Troncon trc : traj.getListeTroncons()) {
+                        if (trc.estSelectionne() || trc.getOrigine().estSelectionne()
+                                || trc.getDestination().estSelectionne()) {
                             return false;
                         }
                     }
                 }
             }
         }
-        
+
         Boolean supprimee = m_reseauRoutier.supprimerSelection();
         ajusterDoubleSens();
         return supprimee;
     }
-    
-    public Boolean supprimerSelectionTransport()
-    {
+
+    public Boolean supprimerSelectionTransport() {
         Boolean supprimee = m_reseauTransport.supprimerSelection();
         return supprimee;
     }
-    
-    public void ajusterDoubleSens(){
-        for (Intersection intrsct : m_reseauRoutier.getIntersections()){
-            for (Troncon trc : intrsct.getTroncons()){
+
+    public void ajusterDoubleSens() {
+        for (Intersection intrsct : m_reseauRoutier.getIntersections()) {
+            for (Troncon trc : intrsct.getTroncons()) {
                 trc.setDoubleSens();
             }
         }
     }
-    
-    public Circuit obtenirCircuitSelectionne(){
-        for (Circuit circ : m_reseauTransport.getListeCircuits()){
-            if (circ.estSelectionne()){
+
+    public Circuit obtenirCircuitSelectionne() {
+        for (Circuit circ : m_reseauTransport.getListeCircuits()) {
+            if (circ.estSelectionne()) {
                 return circ;
             }
         }
         return null;
     }
-    
+
+    public void annulerDerniereAction() {
+        String str = m_log.getLastAction();
+        if (str != null) {
+            String[] parts = str.split(Pattern.quote("\t"));
+            if (parts.length == 4) {
+                String action = parts[0];
+                String p_x = parts[1];
+                String p_y = parts[2];
+                String p_echelle = parts[3];
+
+                switch (action) {
+                    case "ajouterIntersection":
+                        deselectionnerRoutier();
+                        int x = Integer.parseInt(p_x);
+                        int y = Integer.parseInt(p_y);
+                        float echelle = Float.parseFloat(p_echelle);
+                        selectionnerElementRoutier(x, y, echelle);
+                        supprimerSelectionRoutier();
+                        break;
+                }
+            }
+        }
+    }
+
 }
